k8s-configs/ping-cloud/base/pingfederate/admin/cloud-generic/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingfederate-admin
  labels:
    role: pingfederate-admin
spec:
  ports:
  - port: 443
    name: pingfederate-admin
    targetPort: pf-admin
  selector:
    role: pingfederate-admin

---

#
# This is the PingFederate cluster communication service
#
apiVersion: v1
kind: Service
metadata:
  name: pingfederate-cluster
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
    external-dns.alpha.kubernetes.io/hostname: pingfederate-cluster.likemindscloud.com
spec:
  publishNotReadyAddresses: true
  clusterIP: None
  ports:
    - name: pingfederate-cluster-bind
      protocol: TCP
      port: 7600
      targetPort: 7600
    - name: pingfederate-cluster-health
      protocol: TCP
      port: 7700
      targetPort: 7700
  selector:
     cluster: pingfederate-cluster
