k8s-configs/ping-cloud/base/pingfederate/admin/cloud-generic/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pingfederate-admin-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx-public
spec:
  tls:
    - hosts:
        - pingfederate-admin.likemindscloud.com
  rules:
    - host: pingfederate-admin.likemindscloud.com
      http:
        paths:
          # This rule gives internal access to the pingfederate admin services.
          - path: /
            backend:
              serviceName: pingfederate-admin
              servicePort: pf-admin
